# splitrs

./: .gitignore  .splitrs.toml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md
examples/: large_struct.rs  trait_impl_example.rs
src/: config.rs  dependency_analyzer.rs  import_analyzer.rs  main.rs  method_analyzer.rs  scope_analyzer.rs
